fixed button style on smaller screen

--- a/force-app/main/default/lwc/nksButtonContainerBottom/nksButtonContainerBottom.css
+++ b/force-app/main/default/lwc/nksButtonContainerBottom/nksButtonContainerBottom.css
@@ -8,3 +8,11 @@
     --slds-c-button-outline-brand-color-background-active: #cce1ff;
     --slds-c-button-outline-brand-color-border-hover: #0056b4;
 }
+
+@media only screen and (max-width: 1920px) {
+    .responsive-button {
+        height: 2.5rem; /* Set a fixed height for buttons on smaller screens */
+        line-height: 1.2; /* Reduce space between lines on smaller screens */
+        padding: 4px;
+    }
+}
